# university-project-imageprocessing

./: README.md  app_manager.py  main.py  pyproject.toml
controller/: controller.py  main_controller.py
model/: image_processor.py  main_processor.py  processor.py  settings.py  take_picture_processor.py  util_processor.py
view/: basic_setting_view.py  emoji_sticker_setting_view.py  img_sticker_setting_view.py  main_view.py  start_view.py  take_picture_view.py
