[project]
name = "university-project-imageprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "pygame>=2.6.1",
    "pyqt5==5.15.9",
]

[tool.uv]
required-environments = ["sys_platform == 'win32'"]
